--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -1,8 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap')
+@font-face
+  font-family: 'Monoton1'
+  src: url("fonts/Monoton/Monoton-Regular.ttf") format('opentype')
+
+@font-face
+  font-family: 'DiplomataSC'
+  src: url("fonts/DiplomataSC/DiplomataSC-Regular.ttf") format('opentype')
+@font-face
+  font-family: 'RubicGlitch'
+  src: url("fonts/RubicGlitch/RubikGlitch-Regular.ttf") format('opentype')
+@font-face
+  font-family: 'BungleShade'
+  src: url("fonts/BungleShade/BungeeShade-Regular.ttf") format('opentype')
 head,body
   margin: 0
   padding: 0
   height: 100vh
+  color: deeppink
+  font-family: 'RubicGlitch'
   .background
     background-color: #AACC99
     height: 100vh
@@ -27,7 +41,7 @@ head,body
     .score
       width: 100vw
       p
-        font-family: 'Saira Condensed', sans-serif
+
         font-size: 30px
         text-align: start
-        margin: 5px 225px
+        margin: 5px 390px
