--- a/src/components/snakePart/snakePart.module.sass
+++ b/src/components/snakePart/snakePart.module.sass
@@ -3,5 +3,7 @@
   height: 40px
   background-color: #FFFF
   border-radius: 8px
-  box-shadow: 5px 5px 15px 1px rgba(0,0,0,0.32)
   position: absolute
+  .snakeHead
+    width: 40px
+    height: 40px
