--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -1,7 +1,6 @@
 @font-face
   font-family: 'Monoton1'
   src: url("fonts/Monoton/Monoton-Regular.ttf") format('opentype')
-
 @font-face
   font-family: 'DiplomataSC'
   src: url("fonts/DiplomataSC/DiplomataSC-Regular.ttf") format('opentype')
@@ -45,3 +44,12 @@ head,body
         font-size: 30px
         text-align: start
         margin: 5px 390px
+
+
+//----------------------------------------------------
+.move
+  animation: move 0.2s linear
+
+@keyframes move
+    0%
+
